# OS_PasswordManagerEncryption

./: README.md  pyproject.toml
os_passwordmanagerencryption/: password_manager.py  password_utils.py
