[tool.poetry]
name = "os-passwordmanagerencryption"
version = "0.1.0"
description = ""
authors = ["hirajya <rodneyestrada2425@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^43.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
